# WinAirPlay

./: .gitignore  CMakeLists.txt  README.md  rpiplay.cpp  vcpkg.json
.github/workflows/: build.yml
decoder/: aligned_malloc.cc  decoder.vcxproj  decoder.vcxproj.filters  encoded_image.h  h264_decoder_mf.cc  h264_decoder_mf_impl.cc  h264_decoder_mf_impl.h  i420_buffer.cc  i420_buffer_pool.cc
lib/: CMakeLists.txt  byteutils.c  byteutils.cpp  byteutils.h  compat.h  crypto.cpp  dnssd.c  dnssd.cpp  fairplay.h  fairplay_playfair.cpp  http_request.cpp  http_request.h  http_response.cpp  http_response.h  httpd.c  httpd.cpp  httpd.h  logger.cpp  mirror_buffer.c  mirror_buffer.cpp  mirror_buffer.h  netutils.cpp  netutils.h  pairing.cpp  raop.cpp  raop_buffer.cpp  raop_buffer.h  raop_handlers.h  raop_ntp.c  raop_ntp.cpp  raop_ntp.h  raop_rtp.cpp  raop_rtp.h  raop_rtp_mirror.c  raop_rtp_mirror.cpp  raop_rtp_mirror.h  threads.h  utils.cpp  utils.h
lib/aac_decoder/: CMakeLists.txt  aac_decoder.cpp  aac_decoder.h
lib/fdkaac_decoder/: CMakeLists.txt
lib/h264_decoder/: CMakeLists.txt  encoded_image.cc  h264_decoder_mf.h  h264_decoder_mf_impl.cc  i420_buffer.h
lib/plist/: CMakeLists.txt
lib/plist/include/plist/: plist.h
lib/plist/src/: plist.h
lib/pthreads/: CMakeLists.txt
mfDecoder/: mfDecoder.cpp  mfDecoder.vcxproj  mfDecoder.vcxproj.filters
renderers/: CMakeLists.txt  audio_renderer_dummy.c  audio_renderer_gstreamer.c  audio_renderer_rpi.cpp  audio_renderer_rpi.h  fdkaac_decoder.cpp  fdkaac_decoder.h  video_renderer_dummy.c  video_renderer_gstreamer.c
renderers/fdk-aac/: fdk-aac.lib
renderers/fdk-aac/libAACdec/include/: aacdecoder_lib.h
